feat: homework by 11.04